--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-                <a href="#" class="desabilitado">PRIMEIRO POST</a>
+                <a href="#" class="desabilitado">PRÓXIMO POST</a>
                 <p id="data">---- -- --</p>
             </li>
 
