--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li>
-                <a href="#" class="desabilitado">PRÓXIMO POST</a>
+                <a href="#" class="desabilitado">PRIMEIRO POST</a>
                 <p id="data">---- -- --</p>
             </li>
 
@@ -49,21 +49,25 @@
     <section>
         <h5>Redes sociais</h5>
         <ul class="social">
-            <li><a href="https://instagram.com/ceobrenofreitas">Instagram</a></li>
-            <li><a href="https://open.spotify.com/playlist/4NA8RAIZbZW0u3sb8fAkYw?si=VEyJDhDdQDCM50xJdKF6Ag">Spotify</a></li>
-            <li><a href="https://discord.gg/SGJrP7XW">Discord</a></li>
-            <li><a href="https://github.com/ceobrenofreitas">Github</a></li>
+            <li><a href="https://instagram.com/ceobrenofreitas">👉 Instagram</a></li>
+            <li><a href="https://open.spotify.com/playlist/4NA8RAIZbZW0u3sb8fAkYw?si=VEyJDhDdQDCM50xJdKF6Ag">👉 Spotify</a></li>
+            <li><a href="https://discord.gg/SGJrP7XW">👉 Discord</a></li>
+            <li><a href="https://github.com/ceobrenofreitas">👉 Github</a></li>
         </ul>
     </section>
 
     <section>
         <h5>Garagem de Experimentos</h5>
         <ul class="social">
-            <li><a href="#">Categorias</a></li>
-            <li><a href="#">Biblioteca</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">📚Biblioteca</a></li>
+            <li><a href="./pages/sobre.html">😄Sobre</a></li>
+            <li><a href="#">🙌Contato</a></li>
         </ul>
+    </section>
+
+    <section class="footer">
+        <p>Atualizado em 25 02 2021 - 17:30</p>
+        <p>Desenvolvido com 💙 por Ben.</p>
     </section>
 
 </body>
