--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -17,7 +17,7 @@
     <section id="post">
         <h1>😅</h1>
         <p></p>
-        <img src="../images/ben.png" width="100px" alt="">
+        <img src="../images/ben.gif" width="200px" alt="tony stark">
 
         <p>Enfim, 24 anos de existencia.</p>
         
