--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -17,7 +17,7 @@
     <section id="post">
         <h1>😅</h1>
         <p></p>
-        <img src="../images/ben.gif" width="200px" alt="tony stark">
+        <img src="https://media.giphy.com/media/fSdDvQS1K4M0yq10aW/giphy.gif" width="200px" alt="friends">
 
         <p>Enfim, 24 anos de existencia.</p>
         
@@ -49,12 +49,15 @@
         
         <ul class="lista">
             <p></p>
+
+        <b>
             <li># Série: <a href="https://www.youtube.com/watch?v=SJ8XGe1s42E&list=PL9B3913D8761A93AA&ab_channel=VaultShow">The Vault</a></li>
             <li># Filme: <a href="https://www.youtube.com/watch?v=hUk6MpE_GmY&ab_channel=MisterFilmes">Jogos do Apocalipse</a></li>
             <li># Documentário: <a href="https://www.netflix.com/watch/81064069?trackId=13752289&tctx=0%2C0%2Cdd9aa4b855bced00a313eb452c2f77d774ece8d7%3Aad8ac11a16e44ea8d0317a1872634f4970c2617b%2Cdd9aa4b855bced00a313eb452c2f77d774ece8d7%3Aad8ac11a16e44ea8d0317a1872634f4970c2617b%2Cunknown%2C">Os segredos de Saqqara</a></li>
             <li># Música: <a href="https://www.youtube.com/watch?v=UfcAVejslrU&ab_channel=JustMusicTV">Marconi Union - Weightless</a></li>
             <li># Livro: <a href="https://www.amazon.com.br/Prisioneiros-mente-Augusto-Cury/dp/8595084297/ref=asc_df_8595084297/?tag=googleshopp00-20&linkCode=df0&hvadid=379720205994&hvpos=&hvnetw=g&hvrand=14579594444143884345&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9074128&hvtargid=pla-786135657057&psc=1">Prisioneiros da mente - Augusto Cury</a></li>
             <li># Vídeo: <a href="https://www.youtube.com/watch?v=O9r3AN620dI&ab_channel=thevirts">CAMERA ROBOT X Cardistry</a></li>
+        </b>
         </ul>
         <p></p>
         <h4>Coisas que gostaria de fazer ainda esse ano.</h4>
