--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Notes - Blog</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="https://i.pinimg.com/originals/c7/8f/9c/c78f9c888554a3633e0fcba4f8201027.png" type="imagem/gif">
 </head>
 
 <body>
