--- a/index.html
+++ b/index.html
@@ -31,20 +31,14 @@
         <h5>Publicados recentemente:</h5>
         <ul>
             <li>
-                <a href="./posts/postbase.html">PRIMEIRO POST</a>
+                <a href="./posts/post02.html">POST 02 - AVANÇO TECNOLÓGICO, GITHUB VAULT E EDUCAÇÃO.</a>
+                <p id="data">2021 02 26</p>
+            </li>
+
+            <li>
+                <a href="./posts/postbase.html">POST 01 - PRIMEIRO POST</a>
                 <p id="data">2021 02 25</p>
             </li>
-
-            <li>
-                <a href="#" class="desabilitado">PRÓXIMO POST</a>
-                <p id="data">---- -- --</p>
-            </li>
-
-            <li>
-                <a href="#" class="desabilitado">PRIMEIRO POST</a>
-                <p id="data">---- -- --</p>
-            </li>
-
     </section>
 
     <section>
