--- a/pages/area51.html
+++ b/pages/area51.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben Notes - Blog</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="https://i.pinimg.com/originals/c7/8f/9c/c78f9c888554a3633e0fcba4f8201027.png" type="imagem/gif">
 </head>
-
 <body>
     <header id="hero">
-        <h4>
-            Olá!👋
-        </h4>
- 
-        <p>
-            Eu sou o Ben. 
-            <br><br>
-            Esse é meu experimento mais recente, um blog estático.
-            É apenas um blog simples, minimalista com cores legais.
-            <br><br>
-            Nele, irei tentar escrever com certa frequencia minhas ideias, o que ando
-            estudando, experiências ou consumindo ultimamente.
-        </p>
+        <a id="voltar" href="../index.html">voltar</a>
     </header>
 
-    <section id="posts">
-        <h5>Publicados recentemente:</h5>
-        <ul>
-            <li>
-                <a href="./posts/post02.html">POST 02 - AVANÇO TECNOLÓGICO, GITHUB VAULT E EDUCAÇÃO.</a>
-                <p id="data">2021 02 26</p>
-            </li>
-
-            <li>
-                <a href="./posts/postbase.html">POST 01 - PRIMEIRO POST</a>
-                <p id="data">2021 02 25</p>
-            </li>
+    <section id="area51"> 
+        <img src="../images/ÁREA 51/1.png" alt="">
+        <img src="../images/ÁREA 51/2.png" alt="">
     </section>
 
     <section>
@@ -54,18 +31,16 @@
     <section>
         <h5>Garagem de Experimentos</h5>
         <ul class="social">
-            <li><a href="./pages/area51.html">👽ÁREA 51 (beta)</a></li>
+            <li><a href="#">👽ÁREA 51 (beta)</a></li>
             <li><a href="#" class="disable">📚Biblioteca [em reforma]</a></li>
-            <li><a href="pages/sobre.html">😄Sobre</a></li>
+            <li><a href="../pages/sobre.html">😄Sobre</a></li>
             <li><a href="#" class="disable">🙌Contato [error 404]</a></li>
         </ul>
     </section>
 
     <section class="footer">
-        <p>Atualizado em 05 02 2021 - 02:57am</p>
         <p>Desenvolvido com 💙 por Ben.</p>
     </section>
 
 </body>
-
 </html>
