--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -12,7 +12,7 @@
 
 <body>
     <header id="hero">
-        <a id="voltar" href="../">voltar</a>
+        <a id="voltar" href="../index.html">voltar</a>
     </header>
 
     <section id="post">
@@ -90,9 +90,10 @@
     <section>
         <h5>Garagem de Experimentos</h5>
         <ul class="social">
-            <li><a href="#">📚Biblioteca</a></li>
+            <li><a href="#">👽ÁREA 51 (beta)</a></li>
+            <li><a href="#" class="disable">📚Biblioteca [em reforma]</a></li>
             <li><a href="../pages/sobre.html">😄Sobre</a></li>
-            <li><a href="#">🙌Contato</a></li>
+            <li><a href="#" class="disable">🙌Contato [error 404]</a></li>
         </ul>
     </section>
 
