--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
             <li><a href="#" class="disable">📚Biblioteca [em reforma]</a></li>
             <li><a href="pages/sobre.html">😄Sobre</a></li>
             <li><a href="#" class="disable">🙌Contato [error 404]</a></li>
+            <li><a href="./pages/amptime/amptime.html">⌛Ampulheta</a></li>
+            <p>Esse é um projeto que visa fazer uma ampulheta digital, para ajudar as pessoas a contarem o tempo até terminar uma atividade.</p>
         </ul>
     </section>
 
     <section class="footer">
-        <p>Atualizado em 05 02 2021 - 02:57am</p>
+        <p>Atualizado em 17 03 2021 - 15:55pm</p>
         <p>Desenvolvido com 💙 por Ben.</p>
     </section>
 
