enviando solução pra pasta inacessível

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><a href="#" class="disable">📚Biblioteca [em reforma]</a></li>
             <li><a href="pages/sobre.html">😄Sobre</a></li>
             <li><a href="#" class="disable">🙌Contato [error 404]</a></li>
-            <li><a href="./pages/amptime/amptime.html">⌛Ampulheta</a></li>
+            <li><a href="./pages/amptime.html">⌛Ampulheta</a></li>
             <p>Esse é um projeto que visa fazer uma ampulheta digital, para ajudar as pessoas a contarem o tempo até terminar uma atividade.</p>
         </ul>
     </section>
