--- a/pages/imersaoDev.html
+++ b/pages/imersaoDev.html
@@ -46,10 +46,10 @@
                     </p>
                 </a>
 
-                <a href="#" class="card card-disabled">
+                <a href="https://codepen.io/ceobrenofreitas/pen/PoWzXdR" class="card card-disabled">
                     <p class="card-title">Projeto 2</p>
                     <p class="card-descript">
-                        ⌛ Em andamento...
+                        ✔️Feito
                         <br>
                         Calculadora e laços condicionais no JavaScript.
                     </p>
