--- a/pages/imersaoDev.html
+++ b/pages/imersaoDev.html
@@ -46,7 +46,7 @@
                     </p>
                 </a>
 
-                <a href="https://codepen.io/ceobrenofreitas/pen/PoWzXdR" class="card card-disabled">
+                <a href="https://codepen.io/ceobrenofreitas/pen/PoWzXdR" class="card ">
                     <p class="card-title">Projeto 2</p>
                     <p class="card-descript">
                         ✔️Feito
