--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
             <li><a href="pages/sobre.html">😄Sobre</a></li>
             <li><a href="#" class="disable">🙌Contato [error 404]</a></li>
             <li><a href="./pages/imersaoDev.html">👨🏻‍💻ImersãoDEV 2021</a></li>
+            <li><a href="./pages/OSIRIS/osiris.html">🏺‍⚱️🏺‍⚱️ Projeto Osíris 🏺‍⚱️🏺‍⚱️</a></li>
         </ul>
     </section>
 
     <section class="footer">
-        <p>Atualizado em 27 03 2021 - 23:36pm</p>
+        <p>Atualizado em 30 03 2021 - 20:57pm</p>
         <p>Desenvolvido com 💙 por Ben.</p>
     </section>
 
